# zkp

./: .gitignore  CIRCUIT_SPEC.md  LITEPAPER.md  README.md  SUMMARY.md  merkleroot.txt  package-lock.json  package.json  tsconfig.json
circuits/: airdrop.circom  airdrop_verification_key.json  zkvote.circom
lib/: bigint.ts  constants.ts  fs.ts  merkle.ts  prover.ts  vote.ts
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
scripts/: build_merkle_tree.ts  demo_double_vote.ts  generate_vote_proof.ts  verify_vote_proof.ts
shards/: manifest.txt
types/: external.d.ts
