[package]
name = "zk-airdrop"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk_airdrop"
path = "src/lib.rs"

[[bin]]
name = "build-merkle-db"
path = "src/bin/build_merkle_db.rs"

[[bin]]
name = "check-merkle-leaf"
path = "src/bin/check_merkle_leaf.rs"

[[bin]]
name = "airdrop-prove-sim"
path = "src/bin/airdrop_prove_sim.rs"

[[bin]]
name = "airdrop-verify-sim"
path = "src/bin/airdrop_verify_sim.rs"

[[bin]]
name = "print-meta"
path = "src/bin/print_meta.rs"

[[bin]]
name = "deterministic-sign"
path = "src/bin/deterministic_sign.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
ark-bn254 = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
lmdb = "0.8"
sha2 = "0.10"
sha3 = "0.10"
